missing tftp/http server

--- a/dhcp/dhcpd_update/grandstream.conf
+++ b/dhcp/dhcpd_update/grandstream.conf
@@ -1,3 +1,4 @@
 subclass "voip-mac-address-prefix" 1:00:0b:82 {
+    option tftp-server-name = config-option VOIP.http-server-uri;
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT GrandStream PREFIX 1:00:0b:82"));
 }
