--- a/dhcp/dhcp/dhcpd_update/digium.conf
+++ b/dhcp/dhcp/dhcpd_update/digium.conf
@@ -1,6 +1,6 @@
 
 group {
-    option tftp-server-name = concat(config-option VOIP.http-server-uri, "/");
+    option tftp-server-name = concat(config-option VOIP.http-server-uri, "/Digium");
 
     class "DigiumD40" {
         match if substring(option vendor-class-identifier, 0, 10) = "digium_D40";
