add mac range for Snom M3

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -65,11 +65,24 @@ group {
         match if option vendor-class-identifier = "snomPA1";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom PA1"));
     }
+
+    class "SnomM3" {
+        # not tested
+        match if option vendor-class-identifier = "snomM3";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom M3"));
+    }
 }
 
 subclass "voip-mac-address-prefix" 1:00:04:13 {
     if not exists vendor-class-identifier {
         option tftp-server-name = config-option VOIP.http-server-uri;
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom PREFIX 1:00:04:13"));
+    }
+}
+
+subclass "voip-mac-address-prefix" 1:00:08:7B {
+    if not exists vendor-class-identifier {
+        option tftp-server-name = config-option VOIP.http-server-uri;
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom PREFIX 1:00:08:7B"));
     }
 }
