--- a/plugins/xivo-polycom/4.0.4/var/tftpboot/000000000000.cfg
+++ b/plugins/xivo-polycom/4.0.4/var/tftpboot/000000000000.cfg
@@ -2,7 +2,7 @@
 <APPLICATION
 
 APP_FILE_PATH="sip.ld"
-CONFIG_FILES="[PHONE_MAC_ADDRESS]-user.cfg, common.cfg, phone1.cfg, sip.cfg"
+CONFIG_FILES="[PHONE_MAC_ADDRESS]-user.cfg, common.cfg"
 MISC_FILES=""
 LOG_FILE_DIRECTORY=""
 OVERRIDES_DIRECTORY=""
