Enable Phone Lock feature

--- a/plugins/xivo-polycom/4.0.4/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/4.0.4/var/tftpboot/common.cfg
@@ -54,4 +54,5 @@
       <voIpProt.SIP.alertInfo voIpProt.SIP.alertInfo.1.value="xivo-autoanswer" />
     </voIpProt.SIP>
   </voIpProt>
+  <phoneLock phoneLock.enabled="1" />
 </polycomConfig>
