add OUI for Cisco-Linksys

--- a/dhcp/dhcp/dhcpd_update/linksys.conf
+++ b/dhcp/dhcp/dhcpd_update/linksys.conf
@@ -169,6 +169,13 @@ subclass "voip-mac-address-prefix" 1:00:25:9c {
     }
 }
 
+subclass "voip-mac-address-prefix" 1:20:aa:4b {
+    if not exists vendor-class-identifier {
+        option tftp-server-name = config-option VOIP.tftp-server-name;
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:20:aa:4b"));
+    }
+}
+
 subclass "voip-mac-address-prefix" 1:58:6d:8f {
     if not exists vendor-class-identifier {
         option tftp-server-name = config-option VOIP.tftp-server-name;
