--- a/dhcp/dhcp/dhcpd_update/yealink.conf
+++ b/dhcp/dhcp/dhcpd_update/yealink.conf
@@ -2,3 +2,8 @@ subclass "voip-mac-address-prefix" 1:00:15:65 {
     option tftp-server-name = config-option VOIP.http-server-uri;
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:00:15:65"));
 }
+
+subclass "voip-mac-address-prefix" 1:E4:34:D7 {
+    option tftp-server-name = config-option VOIP.http-server-uri;
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:E4:34:D7"));
+}
