add DHCP configuration for 7920 and 7921

--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -1,6 +1,8 @@
 # Note: as of isc-dhcpd-4.1.1-P1, group works on class declaration but
 # doesn't work on subclass declaration.
 
+option option-150 code 150 = ip-address;
+
 group {
     option tftp-server-name = config-option VOIP.tftp-server-name;
     
@@ -36,6 +38,18 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7912G"));
     }
     
+    class "CiscoCP-7920" {
+        match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone 7920\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7920"));
+
+        option option-150 = config-option VOIP.tftp-server-ip;
+    }
+
+    class "CiscoCP-7921G" {
+        match if option vendor-class-identifier = "Cisco Systems Inc. Wireless Phone 7921";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7921G"));
+    }
+
     class "CiscoCP-7931G" {
         match if suffix(option vendor-class-identifier, 9) = "CP-7931G\x00";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7931G"));
