added 514G in dhcp config #4661

--- a/dhcp/dhcp/dhcpd_update/ciscosmb.conf
+++ b/dhcp/dhcp/dhcpd_update/ciscosmb.conf
@@ -43,6 +43,12 @@ group {
                   or option vendor-class-identifier = "Cisco SPA509G");
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT CiscoSMB SPA509G"));
     }
+
+    class "CiscoSMBSPA514G" {
+        match if (option vendor-class-identifier = "Cisco Systems, Inc. IP Phone SPA514G" 
+                  or option vendor-class-identifier = "Cisco SPA514G");
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT CiscoSMB SPA514G"));
+    }
     
     class "CiscoSMBSPA525G" {
         match if (option vendor-class-identifier = "Cisco Systems, Inc. IP Phone SPA525G"
