simplify static configuration files for Polycom
4.0.4 and 5.0.0 use the same 000000000000.cfg and common.cfg files, so
keep only one copy in the common directory. The previous common.cfg file
in the common directory was no more used since the removal of the 3.X
plugins..

Also, update the style to the same style used in base.tpl, i.e. flat.

Also, use the default "autoanswer" ring tone class.

--- a/plugins/xivo-polycom/common/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/common/var/tftpboot/common.cfg
@@ -1,41 +1,35 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<config
+<polycomConfig
 
-tcpIpApp.sntp.gmtOffset.overrideDHCP="1"
+bg.hiRes.color.pat.solid.1.green="237"
+bg.hiRes.color.pat.solid.1.name="XiVO"
+bg.hiRes.color.pat.solid.1.red="231"
 
-lcl.datetime.time.24HourClock="1"
+button.color.selection.2.1.modify="rgbHiLo,255,255,157,255,3,255"
 
 dialplan.digitmap="[0123456789*#].T"
 dialplan.digitmap.timeOut="3"
 
-up.oneTouchVoiceMail="1"
-up.mwiVisible="1"
+feature.presence.enabled="1"
 
-feature.1.enabled="1"
-feature.1.name="presence"
-
-bg.hiRes.color.pat.solid.1.name="XiVO"
-bg.hiRes.color.pat.solid.1.red="231"
-bg.hiRes.color.pat.solid.1.green="237"
-bg.hiRes.color.pat.solid.1.blue="249"
-button.color.selection.2.1.modify="rgbHiLo,255,255,157,255,3,255"
+lcl.datetime.time.24HourClock="1"
 
 msg.bypassInstantMessage="1"
 
-tone.chord.callProg.6.offDur="0"
+phoneLock.enabled="1"
 
-se.pat.misc.1.name="message waiting"
-se.pat.misc.1.inst.1.type="silence"
-se.pat.misc.1.inst.2.type="silence"
-se.pat.misc.1.inst.3.type="silence"
+se.pat.misc.messageWaiting.inst.1.type="silence"
+se.pat.misc.messageWaiting.inst.2.type="silence"
+se.pat.misc.messageWaiting.inst.3.type="silence"
 
-sec.srtp.offer.HMAC_SHA1_80="1"
-sec.srtp.offer.HMAC_SHA1_32="0"
+tcpIpApp.sntp.gmtOffset.overrideDHCP="1"
 
-se.rt.1.enabled="1"
-se.rt.1.type="answer"
+tone.chord.callProg.callWaiting.offDur="0"
 
+up.mwiVisible="1"
+up.oneTouchVoiceMail="1"
+
+voIpProt.SIP.alertInfo.1.class="autoAnswer"
 voIpProt.SIP.alertInfo.1.value="xivo-autoanswer"
-voIpProt.SIP.alertInfo.1.class="1"
 
 />
