disable spontaneous call appearances

--- a/plugins/xivo-polycom/common/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/common/var/tftpboot/common.cfg
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <polycomConfig
 
+attendant.behaviors.display.spontaneousCallAppearances.normal="0"
+
 bg.hiRes.color.pat.solid.1.green="237"
 bg.hiRes.color.pat.solid.1.name="XiVO"
 bg.hiRes.color.pat.solid.1.red="231"
