--- a/plugins/xivo-polycom/common/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/common/var/tftpboot/common.cfg
@@ -14,6 +14,10 @@ dialplan.digitmap.timeOut="3"
 
 lcl.datetime.time.24HourClock="1"
 
+lcl.ml.lang.menu.7="French_France"
+lcl.ml.lang.menu.7.label="Français (fr-fr)"
+lcl.ml.lang.clock.7.format="D,dM"
+
 msg.bypassInstantMessage="1"
 
 phoneLock.enabled="1"
