add a default xivo directory softkey

--- a/plugins/xivo-polycom/common/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/common/var/tftpboot/common.cfg
@@ -12,6 +12,8 @@ button.color.selection.2.1.modify="rgbHiLo,255,255,157,255,3,255"
 dialplan.digitmap="[0123456789*#].T"
 dialplan.digitmap.timeOut="3"
 
+feature.enhancedFeatureKeys.enabled="1"
+
 lcl.datetime.time.24HourClock="1"
 
 lcl.ml.lang.menu.7="French_France"
