replace xivo-cisco-spa-7.4.4 with xivo-cisco-spa-7.5.5
* the 7.5.5 firmware fix the UTF-8 character display problem
* also add support for the <Locale> parameter
* fix some stuff with SPA514G, add SPA512G

Ticket #4548.

--- a/dhcp/dhcp/dhcpd_update/ciscosmb.conf
+++ b/dhcp/dhcp/dhcpd_update/ciscosmb.conf
@@ -44,8 +44,14 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT CiscoSMB SPA509G"));
     }
 
+    class "CiscoSMBSPA512G" {
+        match if (option vendor-class-identifier = "Cisco Systems, Inc. IP Phone SPA512G"
+                  or option vendor-class-identifier = "Cisco SPA512G");
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT CiscoSMB SPA512G"));
+    }
+
     class "CiscoSMBSPA514G" {
-        match if (option vendor-class-identifier = "Cisco Systems, Inc. IP Phone SPA514G" 
+        match if (option vendor-class-identifier = "Cisco Systems, Inc. IP Phone SPA514G"
                   or option vendor-class-identifier = "Cisco SPA514G");
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT CiscoSMB SPA514G"));
     }
