--- a/dhcp/dhcp/dhcpd_update.conf
+++ b/dhcp/dhcp/dhcpd_update.conf
@@ -9,6 +9,7 @@ include "/etc/dhcp/dhcpd_update/cisco.conf";
 include "/etc/dhcp/dhcpd_update/ciscosmb.conf";
 include "/etc/dhcp/dhcpd_update/digium.conf";
 include "/etc/dhcp/dhcpd_update/doro.conf";
+include "/etc/dhcp/dhcpd_update/fanvil.conf";
 include "/etc/dhcp/dhcpd_update/grandstream.conf";
 include "/etc/dhcp/dhcpd_update/kirk.conf";
 include "/etc/dhcp/dhcpd_update/linksys.conf";
