add new xivo-snom-8.7.5.8.2 plugin

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -28,6 +28,11 @@ group {
         match if option vendor-class-identifier = "snom710";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 710"));
     }
+
+    class "Snom715" {
+	match if option vendor-class-identifier = "snom715";
+	log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 715"));
+    }
     
     class "Snom720" {
         match if option vendor-class-identifier = "snom720";
