update dhcpd_update/snom.conf for snom 715

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -3,7 +3,8 @@
 
 group {
     option tftp-server-name = config-option VOIP.http-server-uri;
-    
+    # the domain-name-servers option must be provided for the Snom 715 to work properly
+    option domain-name-servers = config-option VOIP.tftp-server-ip; 
     class "Snom300" {
         match if option vendor-class-identifier = "snom300";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 300"));
