added new mac prefix for linksys spa8000 #5148

--- a/dhcp/dhcp/dhcpd_update/linksys.conf
+++ b/dhcp/dhcp/dhcpd_update/linksys.conf
@@ -189,3 +189,10 @@ subclass "voip-mac-address-prefix" 1:68:7f:74 {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:68:7f:74"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:d0:c7:89 {
+    if not exists vendor-class-identifier {
+        option tftp-server-name = config-option VOIP.tftp-server-name;
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:d0:c7:89"));
+    }
+}
