add support for cisco spa100 family (spa112 and spa122)

--- a/dhcp/dhcp/dhcpd_update/ciscosmb.conf
+++ b/dhcp/dhcp/dhcpd_update/ciscosmb.conf
@@ -67,6 +67,16 @@ group {
         match if option vendor-class-identifier = "Cisco SPA525G2";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT CiscoSMB SPA525G2"));
     }
+
+    class "CiscoSMBSPA112" {
+        match if option vendor-class-identifier = "CISCO SPA112";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco SPA112"));
+    }
+
+    class "CiscoSMBSPA122" {
+        match if option vendor-class-identifier = "CISCO SPA122";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco SPA122"));
+    }
 }
 
 subclass "voip-mac-address-prefix" 1:00:26:99 {
