added support for aastra 68XX series in dhcpd

--- a/dhcp/dhcp/dhcpd_update/aastra.conf
+++ b/dhcp/dhcp/dhcpd_update/aastra.conf
@@ -59,6 +59,21 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6757i"));
     }
 
+    class "Aastra6863i" {
+        match if option vendor-class-identifier = "AastraIPPhone6863i";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6863i"));
+    }
+
+    class "Aastra6865i" {
+        match if option vendor-class-identifier = "AastraIPPhone6865i";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6865i"));
+    }
+
+    class "Aastra6867i" {
+        match if option vendor-class-identifier = "AastraIPPhone6867i";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6867i"));
+    }
+
     class "Aastra9143i" {
         match if option vendor-class-identifier = "AastraIPPhone9143i";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 9143i"));
