dhcp: fix mitel conf

--- a/dhcp/dhcp/dhcpd_update.conf
+++ b/dhcp/dhcp/dhcpd_update.conf
@@ -13,6 +13,7 @@ include "/etc/dhcp/dhcpd_update/fanvil.conf";
 include "/etc/dhcp/dhcpd_update/grandstream.conf";
 include "/etc/dhcp/dhcpd_update/kirk.conf";
 include "/etc/dhcp/dhcpd_update/linksys.conf";
+include "/etc/dhcp/dhcpd_update/mitel.conf";
 include "/etc/dhcp/dhcpd_update/nortel.conf";
 include "/etc/dhcp/dhcpd_update/panasonic.conf";
 include "/etc/dhcp/dhcpd_update/polycom.conf";
