dhcp: add snom 725

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -40,6 +40,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 720"));
     }
 
+    class "Snom725" {
+        match if option vendor-class-identifier = "snom725";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 725"));
+    }
+
     class "Snom760" {
         match if option vendor-class-identifier = "snom760";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 760"));
