xivo-polycom: add switchboard support
To VVX400/VVX410.

--- a/plugins/xivo-polycom/5.3.0/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/5.3.0/var/tftpboot/common.cfg
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <polycomConfig
 
+apps.push.secureTunnelRequired="0"
+
 attendant.behaviors.display.spontaneousCallAppearances.normal="0"
 
 dialplan.digitmap="[0123456789*#].T"
 dialplan.digitmap.timeOut="3"
 
 feature.enhancedFeatureKeys.enabled="1"
+
+httpd.cfg.secureTunnelRequired="0"
 
 lcl.datetime.time.24HourClock="1"
 
