--- a/dhcp/dhcp/dhcpd_update/ciscosmb.conf
+++ b/dhcp/dhcp/dhcpd_update/ciscosmb.conf
@@ -92,3 +92,10 @@ subclass "voip-mac-address-prefix" 1:50:3d:e5 {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco PREFIX 1:50:3d:e5"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:00:e1:6d {
+    if not exists vendor-class-identifier {
+        option tftp-server-name = concat(config-option VOIP.http-server-uri, "/spa$PSN.cfg");
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco PREFIX 1:00:e1:6d"));
+    }
+}
