update DHCP configuration for Aastra 6800

--- a/dhcp/dhcp/dhcpd_update/aastra.conf
+++ b/dhcp/dhcp/dhcpd_update/aastra.conf
@@ -74,6 +74,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6867i"));
     }
 
+    class "Aastra6869i" {
+        match if option vendor-class-identifier = "AastraIPPhone6869i";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6869i"));
+    }
+
     class "Aastra9143i" {
         match if option vendor-class-identifier = "AastraIPPhone9143i";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 9143i"));
