dhcp: add Snom765

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -50,6 +50,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 760"));
     }
 
+    class "Snom765" {
+        match if option vendor-class-identifier = "snomD765";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 765"));
+    }
+
     class "Snom820" {
         match if option vendor-class-identifier = "snom820";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 820"));
