--- a/plugins/xivo-polycom/5.3.1/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/5.3.1/var/tftpboot/common.cfg
@@ -35,6 +35,10 @@ tone.chord.callProg.callWaiting.offDur="0"
 up.mwiVisible="1"
 up.oneTouchVoiceMail="1"
 
+voice.volume.persist.handset="1"
+voice.volume.persist.headset="1"
+voice.volume.persist.handsfree="1"
+
 voIpProt.SIP.alertInfo.1.class="autoAnswer"
 voIpProt.SIP.alertInfo.1.value="xivo-autoanswer"
 
