xivo-polycom-5.3.1: persist volume for usb and bluetooth
Contribution from Vincent Garbay:
  http://projects.xivo.io/boards/8/topics/4254?r=4803#message-4803

--- a/plugins/xivo-polycom/5.3.1/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/5.3.1/var/tftpboot/common.cfg
@@ -38,6 +38,8 @@ up.oneTouchVoiceMail="1"
 voice.volume.persist.handset="1"
 voice.volume.persist.headset="1"
 voice.volume.persist.handsfree="1"
+voice.volume.persist.usbHeadset="1"
+voice.volume.persist.bluetooth.headset="1"
 
 voIpProt.SIP.alertInfo.1.class="autoAnswer"
 voIpProt.SIP.alertInfo.1.value="xivo-autoanswer"
