add new SPA8000 prefix

--- a/dhcp/dhcp/dhcpd_update/linksys.conf
+++ b/dhcp/dhcp/dhcpd_update/linksys.conf
@@ -203,3 +203,10 @@ subclass "voip-mac-address-prefix" 1:bc:67:1c {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:bc:67:1c"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:c4:72:95 {
+    if not exists vendor-class-identifier {
+        option tftp-server-name = config-option VOIP.tftp-server-name;
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:c4:72:95"));
+    }
+}
