#6073 add new mac for linksys

--- a/dhcp/dhcp/dhcpd_update/linksys.conf
+++ b/dhcp/dhcp/dhcpd_update/linksys.conf
@@ -210,3 +210,10 @@ subclass "voip-mac-address-prefix" 1:c4:72:95 {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:c4:72:95"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:54:7c:69 {
+    if not exists vendor-class-identifier {
+        option tftp-server-name = config-option VOIP.tftp-server-name;
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:54:7c:69"));
+    }
+}
