dhcp: add new polycom prefix

--- a/dhcp/dhcp/dhcpd_update/polycom.conf
+++ b/dhcp/dhcp/dhcpd_update/polycom.conf
@@ -2,3 +2,8 @@ subclass "voip-mac-address-prefix" 1:00:04:f2 {
     option tftp-server-name = concat(config-option VOIP.http-server-uri, "/000000000000.cfg");
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Polycom PREFIX 1:00:04:f2"));
 }
+
+subclass "voip-mac-address-prefix" 1:64:16:7f {
+    option tftp-server-name = concat(config-option VOIP.http-server-uri, "/000000000000.cfg");
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Polycom PREFIX 1:64:16:7f"));
+}
