xivo-polycom: disable the local directory softkey
The 5.4.3 Polycom documentation says this is disabled by default, but
my tests show this is not the case.

Note that the VVX101 and VVX201 also have it disabled, even if they don't
support the remote XiVO directory.

--- a/plugins/xivo-polycom/5.4.3/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/5.4.3/var/tftpboot/common.cfg
@@ -28,6 +28,8 @@ se.pat.misc.messageWaiting.inst.1.type="silence"
 se.pat.misc.messageWaiting.inst.2.type="silence"
 se.pat.misc.messageWaiting.inst.3.type="silence"
 
+softkey.feature.directories="0"
+
 tcpIpApp.sntp.gmtOffset.overrideDHCP="1"
 
 tone.chord.callProg.callWaiting.offDur="0"
