dhcp: add Snom D745

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -45,6 +45,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 725"));
     }
 
+    class "Snom745" {
+        match if option vendor-class-identifier = "snomD745";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 745"));
+    }
+
     class "Snom760" {
         match if option vendor-class-identifier = "snom760";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 760"));
