dhcp: add Patton SN4110 and SN4300

--- a/dhcp/dhcp/dhcpd_update.conf
+++ b/dhcp/dhcp/dhcpd_update.conf
@@ -15,6 +15,7 @@ include "/etc/dhcp/dhcpd_update/kirk.conf";
 include "/etc/dhcp/dhcpd_update/linksys.conf";
 include "/etc/dhcp/dhcpd_update/nortel.conf";
 include "/etc/dhcp/dhcpd_update/panasonic.conf";
+include "/etc/dhcp/dhcpd_update/patton.conf";
 include "/etc/dhcp/dhcpd_update/polycom.conf";
 include "/etc/dhcp/dhcpd_update/siemens.conf";
 include "/etc/dhcp/dhcpd_update/snom.conf";
