--- a/plugins/xivo-polycom/4.0.9/var/tftpboot/common.cfg
+++ b/plugins/xivo-polycom/4.0.9/var/tftpboot/common.cfg
@@ -4,7 +4,7 @@
 attendant.behaviors.display.spontaneousCallAppearances.normal="0"
 
 bg.hiRes.color.pat.solid.1.green="237"
-bg.hiRes.color.pat.solid.1.name="XiVO"
+bg.hiRes.color.pat.solid.1.name="Wazo"
 bg.hiRes.color.pat.solid.1.red="231"
 
 button.color.selection.2.1.modify="rgbHiLo,255,255,157,255,3,255"
