add N720 dhcp support

--- a/dhcp/dhcp/dhcpd_update.conf
+++ b/dhcp/dhcp/dhcpd_update.conf
@@ -10,6 +10,7 @@ include "/etc/dhcp/dhcpd_update/ciscosmb.conf";
 include "/etc/dhcp/dhcpd_update/digium.conf";
 include "/etc/dhcp/dhcpd_update/doro.conf";
 include "/etc/dhcp/dhcpd_update/fanvil.conf";
+include "/etc/dhcp/dhcpd_update/gigaset.conf";
 include "/etc/dhcp/dhcpd_update/grandstream.conf";
 include "/etc/dhcp/dhcpd_update/kirk.conf";
 include "/etc/dhcp/dhcpd_update/linksys.conf";
