Change constructor info

--- a/dhcp/dhcp/dhcpd_update/gigaset.conf
+++ b/dhcp/dhcp/dhcpd_update/gigaset.conf
@@ -4,3 +4,9 @@ class "GigasetN720DMPro" {
               or option vendor-class-identifier = "Gigaset_N720_DM_PRO");
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Gigaset N720 DM PRO"));
 }
+
+subclass "voip-mac-address-prefix" 1:7c:2f:80 {
+    if not exists vendor-class-identifier {
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Gigaset PREFIX 1:7c:2f:80"));
+    }
+}
