--- a/dhcp/dhcp/dhcpd_update/gigaset.conf
+++ b/dhcp/dhcp/dhcpd_update/gigaset.conf
@@ -10,3 +10,10 @@ subclass "voip-mac-address-prefix" 1:7c:2f:80 {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Gigaset PREFIX 1:7c:2f:80"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:00:21:04 {
+    if not exists vendor-class-identifier {
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Gigaset PREFIX 1:00:21:04"));
+    }
+}
+
