--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -120,6 +120,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7975G"));
     }
 
+    class "CiscoCP-8945" {
+        match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-8945\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 8945"));
+    }
+
     class "CiscoCP-8961" {
         match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-8961\x00";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 8961"));
