--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -55,6 +55,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7931G"));
     }
 
+    class "CiscoCP-7937G" {
+        match if suffix(option vendor-class-identifier, 9) = "Cisco Systems, Inc. IP Phone CP-7937G";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7937G"));
+    }
+
     class "CiscoCP-7940G" {
         match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-7940G\x00";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7940G"));
