update cisco config

--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -126,12 +126,12 @@ group {
     }
 
     class "CiscoCP-8941" {
-        match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-8941\x00";
+        match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-8941";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 8941"));
     }
 
     class "CiscoCP-8945" {
-        match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-8945\x00";
+        match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-8945";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 8945"));
     }
 
