adapted dhcpd config

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -25,6 +25,26 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 370"));
     }
 
+    class "SnomD305" {
+        match if option vendor-class-identifier = "snomD305";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D305"));
+    }
+
+    class "SnomD315" {
+        match if option vendor-class-identifier = "snomD315";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D315"));
+    }
+
+    class "SnomD345" {
+        match if option vendor-class-identifier = "snomD345";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D345"));
+    }
+
+    class "SnomD375" {
+        match if option vendor-class-identifier = "snomD375";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D375"));
+    }
+    
     class "Snom710" {
         match if option vendor-class-identifier = "snom710";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 710"));
