add dhcp, fix 903

--- a/dhcp/dhcp/dhcpd_update.conf
+++ b/dhcp/dhcp/dhcpd_update.conf
@@ -12,6 +12,7 @@ include "/etc/dhcp/dhcpd_update/doro.conf";
 include "/etc/dhcp/dhcpd_update/fanvil.conf";
 include "/etc/dhcp/dhcpd_update/gigaset.conf";
 include "/etc/dhcp/dhcpd_update/grandstream.conf";
+include "/etc/dhcp/dhcpd_update/htek.conf";
 include "/etc/dhcp/dhcpd_update/kirk.conf";
 include "/etc/dhcp/dhcpd_update/linksys.conf";
 include "/etc/dhcp/dhcpd_update/nortel.conf";
