--- a/dhcp/dhcp/dhcpd_update/ciscosmb.conf
+++ b/dhcp/dhcp/dhcpd_update/ciscosmb.conf
@@ -106,3 +106,10 @@ subclass "voip-mac-address-prefix" 1:00:da:55 {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco PREFIX 1:00:da:55"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:10:bd:18 {
+    if not exists vendor-class-identifier {
+        option tftp-server-name = concat(config-option VOIP.http-server-uri, "/spa$PSN.cfg");
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco PREFIX 1:10:bd:18"));
+    }
+}
