ATA190 basic support / 2 devices (1 fake, 1 real)

--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -144,4 +144,9 @@ group {
         match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-9951\x00";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 9951"));
     }
+
+    class "CiscoATA190" {
+        match if option vendor-class-identifier = "CISCO ATA190";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco ATA190"));
+    }
 }
