Fixed phonebook support and cleaned up template files

--- a/dhcp/dhcp/dhcpd_update/gigaset.conf
+++ b/dhcp/dhcp/dhcpd_update/gigaset.conf
@@ -6,6 +6,7 @@ class "GigasetN720DMPro" {
 }
 
 subclass "voip-mac-address-prefix" 1:7c:2f:80 {
+    option default-url = config-option VOIP.http-server-uri;
     if not exists vendor-class-identifier {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Gigaset PREFIX 1:7c:2f:80"));
     }
