Snom: add D785 DHCP entry

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -80,6 +80,12 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 765"));
     }
 
+    class "Snom785" {
+        # not tested
+        match if option vendor-class-identifier = "snomD785";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D785"));
+    }
+
     class "Snom820" {
         match if option vendor-class-identifier = "snom820";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 820"));
