cisco-sccp-legacy: add 7940 without suffix

--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -60,6 +60,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7937G"));
     }
 
+    class "CiscoCP-7940" {
+        match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-7940\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7940"));
+    }
+
     class "CiscoCP-7940G" {
         match if option vendor-class-identifier = "Cisco Systems, Inc. IP Phone CP-7940G\x00";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7940G"));
