--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -65,6 +65,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 725"));
     }
 
+    class "Snom735" {
+        match if option vendor-class-identifier = "snomD735";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D735"));
+    }
+
     class "Snom745" {
         match if option vendor-class-identifier = "snomD745";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 745"));
