--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -44,6 +44,11 @@ group {
         match if option vendor-class-identifier = "snomD375";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D375"));
     }
+	
+	class "SnomD385" {
+        match if option vendor-class-identifier = "snomD385";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D385"));
+    }
     
     class "Snom710" {
         match if option vendor-class-identifier = "snom710";
