--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -44,7 +44,12 @@ group {
         match if option vendor-class-identifier = "snomD375";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D375"));
     }
-    
+
+    class "SnomD385" {
+        match if option vendor-class-identifier = "snomD385";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D385"));
+    }
+  
     class "Snom710" {
         match if option vendor-class-identifier = "snom710";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 710"));
@@ -54,7 +59,13 @@ group {
         match if option vendor-class-identifier = "snom715";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 715"));
     }
+	
+    class "SnomD717" {
+        match if option vendor-class-identifier = "snomD717";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D717"));
+    }
 
+	
     class "Snom720" {
         match if option vendor-class-identifier = "snom720";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 720"));
