Rename xivo-snom to wazo-snom Introduce Firmware 10.1.51.12 et 10.1.54.13 Add support of UXM (firmware update) Add my tools/generate_pkgs-db.sh (create pkgs.db) Add support of D120, D712, D385

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -5,6 +5,12 @@ group {
     option tftp-server-name = config-option VOIP.http-server-uri;
     # the domain-name-servers option must be provided for the Snom 715 to work properly
     option domain-name-servers = config-option VOIP.tftp-server-ip;
+	
+	 class "SnomD120" {
+        match if option vendor-class-identifier = "snomD120";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D120"));
+    }
+	
     class "Snom300" {
         match if option vendor-class-identifier = "snom300";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 300"));
@@ -34,6 +40,11 @@ group {
         match if option vendor-class-identifier = "snomD315";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D315"));
     }
+	
+	 class "SnomD335" {
+        match if option vendor-class-identifier = "snomD335";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D335"));
+    }
 
     class "SnomD345" {
         match if option vendor-class-identifier = "snomD345";
@@ -55,6 +66,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 710"));
     }
 
+    class "SnomD712" {
+        match if option vendor-class-identifier = "snomD712";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D712"));
+    }
+
     class "Snom715" {
         match if option vendor-class-identifier = "snom715";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 715"));
@@ -65,7 +81,6 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D717"));
     }
 
-	
     class "Snom720" {
         match if option vendor-class-identifier = "snom720";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 720"));
