cisco-sip: add 6800 DHCP range

--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -192,3 +192,8 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7861"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:d0:ec:35 {
+    option tftp-server-name = config-option VOIP.http-server-uri;
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco PREFIX 1:d0:ec:35"));
+}
