--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -191,6 +191,31 @@ group {
         match if suffix(option vendor-class-identifier, 13) = "CP-7861-3PCC\x00";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 7861"));
     }
+
+    class "CiscoCP-6821" {
+        match if suffix(option vendor-class-identifier, 13) = "CP-6821-3PCC\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 6821"));
+    }
+
+    class "CiscoCP-6841" {
+        match if suffix(option vendor-class-identifier, 13) = "CP-6841-3PCC\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 6841"));
+    }
+
+    class "CiscoCP-6851" {
+        match if suffix(option vendor-class-identifier, 13) = "CP-6851-3PCC\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 6851"));
+    }
+
+    class "CiscoCP-6861" {
+        match if suffix(option vendor-class-identifier, 13) = "CP-6861-3PCC\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 6861"));
+    }
+
+    class "CiscoCP-6871" {
+        match if suffix(option vendor-class-identifier, 13) = "CP-6871-3PCC\x00";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco 6871"));
+    }
 }
 
 subclass "voip-mac-address-prefix" 1:d0:ec:35 {
