dhcp: fix dslforum VDI on Cisco

--- a/dhcp/dhcp/dhcpd_update/cisco.conf
+++ b/dhcp/dhcp/dhcpd_update/cisco.conf
@@ -220,5 +220,7 @@ group {
 
 subclass "voip-mac-address-prefix" 1:d0:ec:35 {
     option tftp-server-name = config-option VOIP.http-server-uri;
-    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco PREFIX 1:d0:ec:35"));
+    if not exists vendor-class-identifier or vendor-class-identifier = "dslforum.org" {
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Cisco PREFIX 1:d0:ec:35"));
+    }
 }
