--- a/dhcp/dhcp/dhcpd_update/yealink.conf
+++ b/dhcp/dhcp/dhcpd_update/yealink.conf
@@ -13,3 +13,12 @@ subclass "voip-mac-address-prefix" 1:80:5E:C0 {
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:80:5E:C0"));
 }
 
+subclass "voip-mac-address-prefix" 1:80:5E:0C {
+    option tftp-server-name = config-option VOIP.http-server-uri;
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:80:5E:0C"));
+}
+
+subclass "voip-mac-address-prefix" 1:24:9A:D8 {
+    option tftp-server-name = config-option VOIP.http-server-uri;
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:24:9A:D8"));
+}
