--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-plugins/_build
-dhcp/dhcpd.tar*
-plugins/_firmwares/*/*
+__pycache__
 !plugins/_firmwares/*/.brand
+.coverage
+.tox
+*.pyc
+coverage.xml
+dhcp/dhcpd.tar*
+plugins/_build
+plugins/_firmwares/*/*
+pycodestyle.txt
+pylint.txt
+unit-tests.xml
