--- a/dhcp/dhcp/dhcpd_update/aastra.conf
+++ b/dhcp/dhcp/dhcpd_update/aastra.conf
@@ -79,6 +79,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6869i"));
     }
 
+    class "Aastra6873i" {
+        match if option vendor-class-identifier = "AastraIPPhone6873i";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 6873i"));
+    }
+
     class "Aastra9143i" {
         match if option vendor-class-identifier = "AastraIPPhone9143i";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra 9143i"));
