--- a/dhcp/dhcp/dhcpd_update/aastra.conf
+++ b/dhcp/dhcp/dhcpd_update/aastra.conf
@@ -101,3 +101,10 @@ subclass "voip-mac-address-prefix" 1:00:08:5d {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra PREFIX 1:00:08:5d"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:08:00:0f {
+    if not exists vendor-class-identifier or not (substring(option vendor-class-identifier, 0, 13) = "AastraIPPhone") {
+        option tftp-server-name = concat(config-option VOIP.http-server-uri, "/Aastra");
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra PREFIX 1:08:00:0f"));
+    }
+}
