alcatel: add previous firmware VDI
Why: necessary to update the firmware on previous versions.

--- a/dhcp/dhcp/dhcpd_update/alcatel.conf
+++ b/dhcp/dhcp/dhcpd_update/alcatel.conf
@@ -23,7 +23,8 @@ class "Alcatel-SIP" {
 }
 
 class "Alcatel-Myriad-ictouch-SIP" {
-    match if option vendor-class-identifier = "aledevice";
+    match if (option vendor-class-identifier = "aledevice")
+        or (option vendor-class-identifier = "ictouch.0");
 
     # vendor encapsulated options are used when the phone is in SIP mode
     vendor-option-space ALU;
