--- a/dhcp/dhcp/dhcpd_update/fanvil.conf
+++ b/dhcp/dhcp/dhcpd_update/fanvil.conf
@@ -9,5 +9,6 @@ subclass "voip-mac-address-prefix" 1:0c:38:3e {
     if not exists vendor-class-identifier {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Fanvil PREFIX 1:0c:38:3e"));
         option tftp-server-name = concat(config-option VOIP.http-server-uri, "/Fanvil/$mac.cfg");
+        option vendor-encapsulated-options = concat(config-option VOIP.http-server-uri, "/Fanvil/$mac.cfg");
     }
 }
