Add tests for Yealink v84 and add timezones with day start to tests

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,10 @@ skipsdist = true
 # entry.py is not loaded directly and thus coverage cannot be ascertained
 omit = **/entry.py
 
+[coverage:report]
+exclude_lines =
+  FileNotFoundError = OSError
+
 [testenv]
 basepython = python3.7
 commands =
