--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py37, pycodestyle, pylint
+basepython = python3.7
+envlist = py37, black, flake8, linters
 skipsdist = true
 
 [coverage:run]
@@ -22,25 +23,33 @@ commands =
 deps =
     -rtest-requirements.txt
     pytest-cov
+exclude =
+    plugins/_build
 
-[testenv:py27]
-basepython = python2.7
+[testenv:black]
+skip_install = true
+deps = black
+commands = black --skip-string-normalization .
 
+[flake8]
+exclude =
+    .tox
+    .eggs
+    plugins/_build
+show-source = true
+max-line-length = 99
+application-import-names = wazo_agid
+# W503: line break before binary operator
+# E203: whitespace before ':' warnings
+# F821: undefined. Because of injected _execfiles, target, etc.
+ignore = E203, W503, F821
 
-[testenv:pycodestyle]
-# E501: line too long (80 chars)
-commands =
-    -sh -c 'pycodestyle --ignore=E501 plugins > pycodestyle.txt'
+[testenv:linters]
+skip_install = true
 deps =
-    pycodestyle
-whitelist_externals =
-    sh
-
-[testenv:pylint]
+    flake8
+    flake8-colors
+    black
 commands =
-    -sh -c 'pylint --rcfile=/usr/share/xivo-ci/pylintrc plugins > pylint.txt'
-deps =
-    -rtest-requirements.txt
-    pylint
-whitelist_externals =
-    sh
+    black --skip-string-normalization --check .
+    flake8 .
