--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 basepython = python3.7
-envlist = py37, black, flake8, linters
+envlist = py37, black, linters
 skipsdist = true
 
 [coverage:run]
@@ -21,7 +21,7 @@ basepython = python3.7
 commands =
     pytest --junitxml=unit-tests.xml --cov=plugins --cov-report term --cov-report xml:coverage.xml plugins
 deps =
-    -rtest-requirements.txt
+    -r test-requirements.txt
     pytest-cov
 exclude =
     plugins/_build
