--- a/dhcp/dhcp/dhcpd_update/alcatel.conf
+++ b/dhcp/dhcp/dhcpd_update/alcatel.conf
@@ -32,12 +32,12 @@ class "Alcatel-Myriad-ictouch-SIP" {
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Alcatel Myriad SIP"));
 }
 
-class "Alcatel-SIP-8028S" {
+class "Alcatel-8028S-SIP" {
     match if (option vendor-class-identifier = "alcatel.ictouch.0")
         or (option vendor-class-identifier = "ictouch.0");
 
     # vendor encapsulated options are used when the phone is in SIP mode
     vendor-option-space ALU;
     option ALU.boot-server-host-name = config-option VOIP.http-server-uri;
-    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Alcatel SIP 8028s"));
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Alcatel 8028s SIP"));
 }
