Correct mac Prefix Syntax

--- a/dhcp/dhcp/dhcpd_update/linksys.conf
+++ b/dhcp/dhcp/dhcpd_update/linksys.conf
@@ -218,9 +218,9 @@ subclass "voip-mac-address-prefix" 1:54:7c:69 {
     }
 }
 
-subclass "voip-mac-address-prefix" 70:1f:53:a0 {
+subclass "voip-mac-address-prefix" 1:70:1f:53 {
     if not exists vendor-class-identifier {
         option tftp-server-name = config-option VOIP.tftp-server-name;
-        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 70:1f:53:a0"));
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Linksys PREFIX 1:70:1f:53"));
     }
 }
