polycom: try adding the MAC address in the common configuration file

--- a/plugins/wazo_polycom/v5_4_3/var/tftpboot/common.cfg
+++ b/plugins/wazo_polycom/v5_4_3/var/tftpboot/common.cfg
@@ -3,6 +3,9 @@
 
 apps.push.secureTunnelRequired="0"
 
+device.prov.tagSerialNo.set="1"
+device.prov.tagSerialNo="1"
+
 attendant.behaviors.display.spontaneousCallAppearances.normal="0"
 
 dialplan.digitmap="[0123456789*#].T"
