zuul: use wazo pipelines

--- a/zuul.yaml
+++ b/zuul.yaml
@@ -9,11 +9,11 @@
 - project:
     templates:
       - wazo-tox-linters
-    check:
+    wazo-check:
       jobs:
         - wazo-provd-plugins:
             nodeset: vm-debian-10-m1s
-    gate:
+    wazo-gate:
       jobs:
         - wazo-provd-plugins:
             nodeset: vm-debian-10-m1s
