fix for alcatel NOE

--- a/dhcp/dhcp/dhcpd_update/alcatel.conf
+++ b/dhcp/dhcp/dhcpd_update/alcatel.conf
@@ -10,6 +10,9 @@ class "Alcatel-NOE" {
 
     # 'next-server' is used when the phone is in NOE mode
     next-server = config-option VOIP.tftp-server-name;
+    # 'filename' is used when specific phone is in NOE mode
+    filename = “sipconfig.txt”
+
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Alcatel NOE"));
 }
 
