panasonic: use http_base_url

--- a/plugins/wazo-panasonic/common/templates/KX-UT133.cfg
+++ b/plugins/wazo-panasonic/common/templates/KX-UT133.cfg
@@ -3,5 +3,4 @@
 FIRM_UPGRADE_ENABLE="Y"
 FIRM_VERSION="01.133"
 FIRM_UPGRADE_AUTO="Y"
-FIRM_FILE_PATH="http://{{ ip }}:{{ http_port }}/firmware/UT13x-01.133_HW1.fw"
-
+FIRM_FILE_PATH="{{ XX_server_url }}/firmware/UT13x-01.133_HW1.fw"
