tox: fix application import name

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ exclude =
     plugins/_build
 show-source = true
 max-line-length = 99
-application-import-names = wazo_agid
+application-import-names = plugins
 # W503: line break before binary operator
 # E203: whitespace before ':' warnings
 # F821: undefined. Because of injected _execfiles, target, etc.
