tox: allow posargs

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ exclude_lines =
 [testenv]
 basepython = python3.9
 commands =
-    pytest --junitxml=unit-tests.xml --cov=plugins --cov-report term --cov-report xml:coverage.xml --ignore plugins/_build/ plugins
+    pytest --junitxml=unit-tests.xml --cov=plugins --cov-report term --cov-report xml:coverage.xml --ignore plugins/_build/ {posargs} plugins
 deps =
     -r test-requirements.txt
     pytest-cov
